--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,62 +9,64 @@
     <LinearLayout
         android:id="@+id/id_layout_flags"
         android:layout_width="100dp"
-        android:layout_height="295dp"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:layout_marginTop="8dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.014"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        android:padding="5dp">
 
         <ImageButton
             android:id="@+id/image_flag_1"
             android:layout_width="70dp"
-            android:layout_height="65dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="5dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:layout_marginBottom="5dp"
-            android:scaleType="fitXY"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
             android:padding="0dp"
-            android:src="@drawable/flag_ger"/>
+            android:scaleType="fitXY"
+            android:src="@drawable/flag_ger" />
 
 
         <ImageButton
             android:id="@+id/image_flag_2"
             android:layout_width="70dp"
-            android:layout_height="65dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="5dp"
+            android:layout_height="0dp"
             android:layout_marginBottom="5dp"
-            android:scaleType="fitXY"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
             android:padding="0dp"
-            android:src="@drawable/flag_bri"/>
+            android:scaleType="fitXY"
+            android:layout_weight="1"
+            android:src="@drawable/flag_bri" />
 
         <ImageButton
             android:id="@+id/image_flag_3"
             android:layout_width="70dp"
-            android:layout_height="65dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="5dp"
+            android:layout_height="0dp"
             android:layout_marginBottom="5dp"
-            android:scaleType="fitXY"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
             android:padding="0dp"
-            android:src="@drawable/flag_fra"/>
+            android:layout_weight="1"
+            android:scaleType="fitXY"
+            android:src="@drawable/flag_fra" />
 
         <ImageButton
             android:id="@+id/image_flag_4"
             android:layout_width="70dp"
-            android:layout_height="65dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="5dp"
+            android:layout_height="0dp"
             android:layout_marginBottom="5dp"
-            android:scaleType="fitXY"
+
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="5dp"
             android:padding="0dp"
-            android:src="@drawable/flag_spa"/>
+            android:layout_weight="1"
+            android:scaleType="fitXY"
+            android:src="@drawable/flag_spa" />
 
     </LinearLayout>
+
 
     <LinearLayout
         android:id="@+id/id_layout_small_images_1"
